RenderText: always break runs at whitespace

RenderTextHarfBuzz is currently inconsistent with where it chooses to
break runs around whitespace whenever non-ascii characters are involved.
Currently it attaches runs of whitespace _after_ characters to the
preceding run (ignoring whether there is a script/ascii/non-ascii
mismatch between the run and the kind of whitespace). However, it does
not always attach runs of whitespace that occur _before_ runs (even if
they are both ascii).

Attaching whitespace while ignoring what script that whitespace is from
can cause problems. A font is not obligated to provide whitespace glyphs
for all scripts.

To fix this, always break at whitespace. This is closer to Blink
behaviour - shorter runs without whitespace makes better use of the
cache of text runs kept in blink's Font class; indexed by string
(typically, a dictionary word).

BUG=731563

Review-Url: https://codereview.chromium.org/2942843002
Cr-Commit-Position: refs/heads/master@{#480350}

Former-commit-id: 141af5c41b4e6a777e5c6d53575f124bc838865e